--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -25,11 +25,11 @@
             </NavLink>
         </div>
          <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/mypages/Statistics">
+            <NavLink class="nav-link" href="/statistic">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Statistics
             </NavLink>
         </div> <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/mypages/Leaderboard">
+            <NavLink class="nav-link" href="/leaderboard">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Leaderboard
             </NavLink>
         </div>
