--- a/HamsterWars/Pages/Component/Gallery.razor
+++ b/HamsterWars/Pages/Component/Gallery.razor
@@ -19,22 +19,22 @@ else
         @foreach (var hamster in hamsters)
         {
             <div class="column">
-                <div class="jasd">
-                    <div class="flip-card">
-                        <div class="flip-card-inner">
-                            <div class="flip-card-front">
-                                <img src="/Content/Photos/@hamster.ImgName" onerror="this.onerror=null; this.src='/Content/Photos/hamster.jpg.jpg'" alt="" style="width:300px;height:300px;">
-                            </div>
-                            <div class="flip-card-back">
-                                <h1>@hamster.Name</h1>
-                                <p>Age:@hamster.Age</p>
-                                <p>Favorite Food:@hamster.FavFood</p>
-                                <p>Favorite Activity:@hamster.Loves</p>
-                                <button type="button" @onclick="(() => RemoveHamster(hamster))" class="btn btn-danger">REMOVE</button>
-                            </div>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="/Content/Photos/@hamster.ImgName" onerror="this.onerror=null; this.src='/Content/Photos/hamster.jpg.jpg'" alt="" style="width:300px;height:300px;">
+                        </div>
+                        <div class="flip-card-back">
+                            <h1>@hamster.Name</h1>
+                            <p>Age:@hamster.Age</p>
+                            <p>Favorite Food:@hamster.FavFood</p>
+                            <p>Favorite Activity:@hamster.Loves</p>
+                            <button type="button" @onclick="(() => RemoveHamster(hamster))" class="btn btn-danger">REMOVE</button>
                         </div>
                     </div>
                 </div>
+
             </div>
         }
     </div>
@@ -50,7 +50,7 @@ else
     private async Task RemoveHamster(HamsterModel hamster)
     {
         await _db.RemoveHamster(hamster);
-
+       _nav.NavigateTo(_nav.Uri, forceLoad: true);
     }
 
     }
