--- a/HamsterWars/Pages/Component/Statistic.razor
+++ b/HamsterWars/Pages/Component/Statistic.razor
@@ -14,7 +14,7 @@ else
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Name</th>
-                <th scope="col">Win rate</th>
+                <th scope="col">Wins</th>
                 <th scope="col">Games</th>
                 <th scope="col">Defeats</th>
             </tr>
