--- a/HamsterWars/Shared/NavMenu.razor
+++ b/HamsterWars/Shared/NavMenu.razor
@@ -21,16 +21,21 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/battle">
-                <span class="oi oi-thumb-down" aria-hidden="true"></span> WAR!!
+                <span class="oi oi-thumb-down" aria-hidden="true"></span> Battle
             </NavLink>
         </div>
-         <div class="nav-item px-3">
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/statistic">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Statistics
             </NavLink>
-        </div> <div class="nav-item px-3">
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/leaderboard">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Leaderboard
+            </NavLink>
+        </div><div class="nav-item px-3">
+            <NavLink class="nav-link" href="/history">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> History
             </NavLink>
         </div>
 
