--- a/HamsterWars/Pages/Component/History.razor
+++ b/HamsterWars/Pages/Component/History.razor
@@ -13,8 +13,8 @@
     <thead>
         <tr>
             <th scope="col">Game</th>
-            <th scope="col">Winner</th>
-            <th scope="col">Looser</th>
+            <th scope="col">Winning Hamster</th>
+            <th scope="col">Losing Hamster</th>
             <th scope="col"></th>
         </tr>
     </thead>
