--- a/HamsterWars/Pages/Component/History.razor
+++ b/HamsterWars/Pages/Component/History.razor
@@ -8,18 +8,17 @@
 
 <h3>History</h3>
 <button type="button" @onclick="RemoveAll" class="btn btn-danger float-end">Remove all</button>
-
 <table class="table table-dark">
     <thead>
         <tr>
             <th scope="col">Game</th>
-            <th scope="col">Winner</th>
-            <th scope="col">Looser</th>
+            <th scope="col">Winning Hamster</th>
+            <th scope="col">Losing Hamster</th>
             <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var result in results)
+        @foreach (var result in resultList)
         {
             test(result.WinnerId, result.LoserId);
             <tr>
@@ -34,23 +33,23 @@
 
 @code {
 
-    List<HamsterModel> hamsters = new List<HamsterModel>();
-    List<ResultModel> results = new List<ResultModel>();
+    List<HamsterModel> hamsterList = new List<HamsterModel>();
+    List<ResultModel> resultList = new List<ResultModel>();
     public HamsterModel? Winner { get; set; }
     public HamsterModel? Loser { get; set; }
 
 
     protected override async Task OnInitializedAsync()
     {
-        hamsters = await _db.GetHamsters();
-        results = await _rb.Getresult();
+        hamsterList = await _db.GetHamsters();
+        resultList = await _rb.Getresult();
     }
     private void test(int winnerId, int loserId)
     {
 
-        foreach (var result in results)
+        foreach (var result in resultList)
         {
-            @foreach (var hamster in hamsters)
+            @foreach (var hamster in hamsterList)
             {
                 if (winnerId == hamster.Id)
                 {
