--- a/HamsterWars/Pages/Component/LeaderBoard.razor
+++ b/HamsterWars/Pages/Component/LeaderBoard.razor
@@ -43,7 +43,10 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        hamsters = await _db.GetHamsters();
+        if (hamsters.Count == 0)
+        {
+            hamsters = await _db.GetHamsters();
+        }
     }
 
     /// <summary>
