--- a/HamsterWars/Pages/Component/Battle.razor
+++ b/HamsterWars/Pages/Component/Battle.razor
@@ -34,7 +34,7 @@ else
                 }
             </div>
         </div>
-        <div class="column justify-content-center">
+        <div class="column justify-content-center text-center">
             @if (battleDone)
             {
                 <button type="button" class="btn btn-primary" onfocus="location.reload()">Next battle</button>
