--- a/HamsterWars/_Imports.razor
+++ b/HamsterWars/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using HamsterWars
 @using HamsterWars.Shared
+@using DataAccessLibrary
+@using DataAccessLibrary.Models
+@using Services
+@using HamsterWars.Models
